python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__('0-add_integer').add_integer
>>> add_integer(1, 2)
3
>>> add_integer(100, -2)
98
>>> add_integer(100.3, -2)
98
>>> add_integer(4, "School")
Traceback (most recent call last):
    ...
TypeError: b must be an integer
>>> add_integer(2, 0)
2
>>> add_integer(0, 0)
0
>>> add_integer(-0, 0)
0
>>> add_integer(-1, -1)
-2
>>> add_integer('t', 1)
Traceback (most recent call last):
    ...
TypeError: a must be an integer
>>> add_integer(100, -2.33333333333333333333333333333333333333333333333333333333333333333)
98
>>> add_integer(,)
Traceback (most recent call last):
    ...
SyntaxError: invalid syntax
>>> add_integer(, 1)
Traceback (most recent call last):
  File "<stdin>", line 1
    add_integer(, 1)
                ^
SyntaxError: invalid syntax
